--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <script src="bower_components/angular/angular.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
+<body ng-app="AddressBook">
 <h1>Hello world!</h1>
+<script src="main.js"></script>
 </body>
 </html>
