First test for controller

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body ng-app="AddressBook">
+<body ng-app=AddressBook>
 <h1>Hello world!</h1>
+<div ng-controller=ContactController>
+    <div ng-repeat="contact in contacts">
+        {{contact.name}}
+    </div>
+</div>
 <script src="main.js"></script>
 </body>
 </html>
