--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 <div ng-controller=ContactController>
     <div ng-repeat="contact in contacts">
         {{contact.name}}
+        <avatar name=contact.name></avatar>
     </div>
 </div>
 <script src="main.js"></script>
