--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,42 @@
         <avatar name=contact.name></avatar>
     </div>
 </div>
-<script src="main.js"></script>
+<div ng-controller=ContactController class="contact-list inline-module">
+  <div ng-repeat='contact in contacts'>
+    <h4>
+      <span class=contact-name>{{contact.name | proper}}</span>
+      <avatar name=contact.name></avatar>
+    </h4>
+    <p>{{contact.occupation}}</p>
+    <p><a href="mailto:{{contact.email}}">{{contact.email}}</a></p>
+  </div>
+</div>
+<div ng-controller=AddContact class="add-contact inline-module">
+  <form ng-submit="addContact()">
+    <h3>Add A New Contact</h3>
+    <label>
+      Name (Req'd)
+      <input required type="text" ng-model="contact.name">
+    </label>
+    <label>
+      Age
+      <input type="number" ng-model="contact.age">
+    </label>
+    <label for="occupation">
+      Occupation
+      <input type="text" ng-model="contact.occupation">
+    </label>
+    <label for="">
+      Email (Req'd)
+      <input type="email" required ng-model="contact.email">
+    </label>
+    <label for="submit">
+      Add New Contact
+      <input type=submit id=submitNewContact>
+    </label>
+    <div class=warning ng-if=errorMessage>Please check the information and try again.</div>
+  </form>
+</div>
+<script src=main.js></script>
 </body>
 </html>
