--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <script src="bower_components/angular/angular.js"></script>
-    <meta charset="UTF-8">
-    <title></title>
+<head>
+  <script src="bower_components/angular/angular.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="styles/main.css">
+  <title>Contacts list</title>
 </head>
 <body ng-app=AddressBook>
-<h1>Hello world!</h1>
-
-<div ng-controller=ContactController>
-    <div ng-repeat="contact in contacts">
-        {{contact.name}}
-        <avatar name=contact.name></avatar>
-    </div>
+<div class="app-title">
+  <h1>Contacts</h1>
+  <h2>List</h2>
 </div>
 <div ng-controller=ContactController class="contact-list inline-module">
   <div ng-repeat='contact in contacts'>
@@ -52,4 +47,3 @@
 </div>
 <script src=main.js></script>
 </body>
-</html>
